MComix 0.98

    - Fixed a bug that occasionally caused MComix to display wrong images
      after deleting an image from a directory.

    - The last-read-page module now falls back to pysqlite2 if sqlite3 isn't
      available.

    - The library can now scan directories for new files every time it is
      started, and automatically add new books. Watched directories can be
      edited with the "Watch list" button in the library main window.

    - Added "Date added" to library sort criteriae. This might be slightly
      inaccurate for older library entries, as only the day, not the time of
      the moment a book was added used to be stored in the library database.

    - Improved performance for library book area and thumbnail side bar by
      only loading thumbnails when they become visible, e.g. triggered by the
      user scrolling around. The "Delay thumbnail generation" option has thus
      been removed.

    - Improved performance for browsing directories with many images.

    - Updated Japanese translation (by Toshiharu Kudoh).

    - Updated French translation (by Frédéric Chateaux).

MComix 0.97.1
Release date: 18.02.2012

    - Corrected libunrar regression. (thanks to Giovanni Scafora for pointing
      this out)

MComix 0.97
Release date: 17.02.2012

    - Fixed segmentation fault on x64 platforms when trying to extract RAR
      archives with libunrar.

    - The lens now uses the original pixbuf when preparing the magnified image
      instead of the already scaled pixbuf that is shown in MComix' display
      area. In addition, fixed zero division error when trying to use the lens
      on images with width greatly exceeding height.

    - If 'Auto load last opened file' was enabled in the preferences, MComix
      would try to load an invalid path if no file was opened when MComix was
      last closed.

    - Menu item hotkeys can now be changed by hovering over a menu item with