@@ -3,6 +3,9 @@ MComix 0.98
     - Fixed a bug that occasionally caused MComix to display wrong images
       after deleting an image from a directory.
 
+    - Fixed a bug that caused MComix to jump back up after scrolling down when
+      an archive was still being loaded.
+
     - The last-read-page module now falls back to pysqlite2 if sqlite3 isn't
       available.
 
